--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Portfolio</title>
+    <meta name="title" content="Zachary Russell - Portfolio">
+    <meta name="description" content="This React.js website showcases some of Zachary Russell's best work in development and his experience.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://zachrussell12.github.io/portfolio">
+    <meta property="og:title" content="Zachary Russell - Portfolio">
+    <meta property="og:description" content="This React.js website showcases some of Zachary Russell's best work in development and his experience.">
+    <meta property="og:image" content="%PUBLIC_URL%/linkPreview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://zachrussell12.github.io/portfolio">
+    <meta property="twitter:title" content="Zachary Russell - Portfolio">
+    <meta property="twitter:description" content="This React.js website showcases some of Zachary Russell's best work in development and his experience.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/linkPreview.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
